--- a/config.conf
+++ b/config.conf
@@ -2,7 +2,7 @@
 friden = {"brave":169478997,"bear":337190674,"monkey1":131173904,"man":284155258,"beard":245587068,"ass":123343610,'monkey2':336778995}
 
 [constant]
-DAYS = 7
+DAYS = 1
 brave = 169478997
 bear = 337190674
 monkey1 = 131173904
@@ -10,3 +10,118 @@ man = 284155258
 beard = 245587068
 ass = 123343610
 monkey2 = 336778995
+
+[heroname]
+Anti-Mage = 敌法师
+Axe = 斧王
+Bane = 痛苦
+Bloodseeker = 血魔
+Crystal Maiden = 冰女
+Drow Ranger = 卓尔游侠
+Earthshaker = 撼地神牛
+Juggernaut = 主宰
+Mirana = 米拉娜
+Shadow Fiend = 影魔
+Morphling = 水人
+Phantom Lancer = 幻影长矛手
+Puck = 帕克
+Pudge =屠夫
+Razor = 剃刀
+Sand King = 沙王
+Storm Spirit = 蓝猫
+Sven = sven
+Tiny = 小小
+Vengeful Spirit = vs
+Windranger = 风行
+Zeus = 宙斯
+Kunkka = 般长
+Lina = Lina
+Lich = 巫妖
+Lion = lion
+Shadow Shaman =  暗影萨满
+Slardar = 大鱼人
+Tidehunter = 潮汐
+Witch Doctor = 巫医
+Riki = riki
+Enigma = 迷团
+Tinker = tk
+Sniper= 火枪
+Necrophos = nec
+Warlock = 术士
+Beastmaster = 兽王
+Queen of Pain = QOP
+Venomancer = 剧毒术士
+Faceless Void = 虚空
+Wraith King = 幽鬼
+Death Prophet = DP
+Phantom Assassin = PA
+Pugna = 帕格娜
+Templar Assassin = TA
+Viper = VIP
+Luna = 露娜
+Dragon Knight = 龙骑
+Dazzle = 黛泽
+Clockwerk = 发条
+Leshrac = 受折
+Nature's Prophet = 先知
+Lifestealer = 食尸鬼
+Dark Seer = DS
+Clinkz = 克林克兹
+Omniknight = 全能
+Enchantress = 小鹿
+Huskar = 哈斯卡
+Night Stalker = 夜魔
+Broodmother = 育母蜘蛛
+Bounty Hunter = 赏金
+Weaver = 蚂蚁
+Jakiro = 双头龙
+Batrider = 蝙蝠
+Chen = 陈
+Spectre = 幽鬼
+Doom = 爸爸
+Ancient Apparition = 冰魂
+Ursa = 拍拍熊
+Spirit Breaker = 欧洲白牛
+Gyrocopter = 飞机
+Alchemist = 炼金
+Invoker = 卡尔
+Silencer = 沉默
+Outworld Devourer = 黑鸟
+Lycan = 狼人
+Brewmaster = 酒仙
+Shadow Demon = 暗影恶魔
+Lone Druid = 德鲁伊
+Chaos Knight = 混沌
+Meepo = 地卜师
+Treant Protector = 树精卫士
+Ogre Magi = 蓝胖
+Undying = 尸王
+Rubick = 拉比克
+Disruptor = 萨尔
+Nyx Assassin = 小强
+Naga Siren = 小娜嫁
+Keeper of the Light = 光法
+Io = 小精灵
+Visage = 维萨吉
+Slark = 小鱼
+Medusa = 一姐
+Troll Warlord =  巨魔
+Centaur Warrunner = 半人马战行者
+Magnus = 马格纳斯
+Timbersaw = 伐木机
+Bristleback = 刚背兽
+Tusk=tusk
+Skywrath Mage = 天怒
+Abaddon= 亚巴顿
+Elder Titan = 大牛
+Legion Commander = 军团
+Ember Spirit =  火猫
+Earth Spirit = 土猫
+Terrorblade = TB
+Phoenix = 凤凰
+Oracle = 神谕
+Techies = 炸弹人
+Winter Wyvern = 寒冬飞龙
+Arc Warden = 天穹
+Underlord = 大屁股
+Monkey King = 大圣
