userinfo:优化返回json的形式。

--- a/config.conf
+++ b/config.conf
@@ -2,7 +2,7 @@
 friden = {"brave":169478997,"bear":337190674,"monkey1":131173904,"man":284155258,"beard":245587068,"ass":123343610,'monkey2':336778995}
 
 [constant]
-DAYS = 1
+DAYS = 5
 brave = 169478997
 bear = 337190674
 monkey1 = 131173904
@@ -17,13 +17,13 @@ Axe = 斧王
 Bane = 痛苦
 Bloodseeker = 血魔
 Crystal Maiden = 冰女
-Drow Ranger = 卓尔游侠
-Earthshaker = 撼地神牛
+Drow Ranger = 小黑
+Earthshaker = 小牛
 Juggernaut = 主宰
 Mirana = 米拉娜
 Shadow Fiend = 影魔
 Morphling = 水人
-Phantom Lancer = 幻影长矛手
+Phantom Lancer = 猴子
 Puck = 帕克
 Pudge =屠夫
 Razor = 剃刀
@@ -38,7 +38,7 @@ Kunkka = 般长
 Lina = Lina
 Lich = 巫妖
 Lion = lion
-Shadow Shaman =  暗影萨满
+Shadow Shaman =  小Y
 Slardar = 大鱼人
 Tidehunter = 潮汐
 Witch Doctor = 巫医
@@ -50,7 +50,7 @@ Necrophos = nec
 Warlock = 术士
 Beastmaster = 兽王
 Queen of Pain = QOP
-Venomancer = 剧毒术士
+Venomancer = 剧毒
 Faceless Void = 虚空
 Wraith King = 幽鬼
 Death Prophet = DP
@@ -66,12 +66,12 @@ Leshrac = 受折
 Nature's Prophet = 先知
 Lifestealer = 食尸鬼
 Dark Seer = DS
-Clinkz = 克林克兹
+Clinkz = 小骷髅
 Omniknight = 全能
 Enchantress = 小鹿
 Huskar = 哈斯卡
 Night Stalker = 夜魔
-Broodmother = 育母蜘蛛
+Broodmother = 蜘蛛
 Bounty Hunter = 赏金
 Weaver = 蚂蚁
 Jakiro = 双头龙
@@ -81,7 +81,7 @@ Spectre = 幽鬼
 Doom = 爸爸
 Ancient Apparition = 冰魂
 Ursa = 拍拍熊
-Spirit Breaker = 欧洲白牛
+Spirit Breaker = 白牛
 Gyrocopter = 飞机
 Alchemist = 炼金
 Invoker = 卡尔
@@ -89,11 +89,11 @@ Silencer = 沉默
 Outworld Devourer = 黑鸟
 Lycan = 狼人
 Brewmaster = 酒仙
-Shadow Demon = 暗影恶魔
-Lone Druid = 德鲁伊
+Shadow Demon = 毒狗
+Lone Druid = 熊德
 Chaos Knight = 混沌
 Meepo = 地卜师
-Treant Protector = 树精卫士
+Treant Protector = 大树
 Ogre Magi = 蓝胖
 Undying = 尸王
 Rubick = 拉比克
@@ -106,8 +106,8 @@ Visage = 维萨吉
 Slark = 小鱼
 Medusa = 一姐
 Troll Warlord =  巨魔
-Centaur Warrunner = 半人马战行者
-Magnus = 马格纳斯
+Centaur Warrunner = 人马
+Magnus = 猛马
 Timbersaw = 伐木机
 Bristleback = 刚背兽
 Tusk=tusk
@@ -121,7 +121,7 @@ Terrorblade = TB
 Phoenix = 凤凰
 Oracle = 神谕
 Techies = 炸弹人
-Winter Wyvern = 寒冬飞龙
+Winter Wyvern = 冰龙
 Arc Warden = 天穹
 Underlord = 大屁股
 Monkey King = 大圣
