html增加了场次的可视化展示

--- a/config.conf
+++ b/config.conf
@@ -2,7 +2,7 @@
 friden = {"brave":169478997,"bear":337190674,"monkey1":131173904,"man":284155258,"beard":245587068,"ass":123343610,'monkey2':336778995}
 
 [constant]
-DAYS = 5
+DAYS = 7
 brave = 169478997
 bear = 337190674
 monkey1 = 131173904
@@ -42,7 +42,7 @@ Shadow Shaman =  小Y
 Slardar = 大鱼人
 Tidehunter = 潮汐
 Witch Doctor = 巫医
-Riki = riki
+Riki = 力丸
 Enigma = 迷团
 Tinker = tk
 Sniper= 火枪
@@ -77,7 +77,7 @@ Weaver = 蚂蚁
 Jakiro = 双头龙
 Batrider = 蝙蝠
 Chen = 陈
-Spectre = 幽鬼
+Spectre = 骷髅王
 Doom = 爸爸
 Ancient Apparition = 冰魂
 Ursa = 拍拍熊
@@ -110,7 +110,7 @@ Centaur Warrunner = 人马
 Magnus = 猛马
 Timbersaw = 伐木机
 Bristleback = 刚背兽
-Tusk=tusk
+Tusk = 巨牙
 Skywrath Mage = 天怒
 Abaddon= 亚巴顿
 Elder Titan = 大牛
