每场数据写入数据库

--- a/config.conf
+++ b/config.conf
@@ -2,7 +2,7 @@
 friden = {"brave":169478997,"bear":337190674,"monkey1":131173904,"man":284155258,"beard":245587068,"ass":123343610,'monkey2':336778995}
 
 [constant]
-DAYS = 1
+DAYS = 3
 brave = 169478997
 bear = 337190674
 monkey1 = 131173904
@@ -52,7 +52,7 @@ Beastmaster = 兽王
 Queen of Pain = QOP
 Venomancer = 剧毒
 Faceless Void = 虚空
-Wraith King = 幽鬼
+Wraith King = 骷髅王
 Death Prophet = DP
 Phantom Assassin = PA
 Pugna = 帕格娜
@@ -77,7 +77,7 @@ Weaver = 蚂蚁
 Jakiro = 双头龙
 Batrider = 蝙蝠
 Chen = 陈
-Spectre = 骷髅王
+Spectre = 幽鬼
 Doom = 爸爸
 Ancient Apparition = 冰魂
 Ursa = 拍拍熊
